fix screen alignment

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,4 +5,13 @@
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+    &>a{
+        text-decoration: none;
+        font-family: "roboto";
+    }
+    &>*{
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
 }
