--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header .logo, .header .search{ 
     margin-right: auto;
     margin-left: auto;
-    max-width: 100%;
+    max-width: 1440px;
 }
